--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hi excursion
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Title of the document</title>
+    <link rel="stylesheet" href="resources/css/style.css">
+</head>
+
+<body>
+    <div class="general">
+        <h1>
+            Discover hidden places in the world around you
+        </h1>
+        <a href="">Download Excursion (Coming soon!)</a>
+    </div>
+
+
+</body>
+
+</html>
