--- a/index.html
+++ b/index.html
@@ -7,13 +7,37 @@
 
 <body>
     <div class="general">
-        <h1>
-            Discover hidden places in the world around you
-        </h1>
-        <a href="">Download Excursion (Coming soon!)</a>
+        <header>
+            <h1>
+                Discover hidden places in the world around you
+            </h1>
+            <a href="">Download Excursion (Coming soon!)</a>
+        </header>
+        <video src="resources/img/excursion.mp4" type="video/mp4" autoplay muted>
+            Your browser does not support the video tag.
+        </video>
+        <h2>
+            Your personal travel guide
+        </h2>
+        <h3>
+            Excursion remembers places you like, and recommends new points of interest around you.
+        </h3>
+        <div class="camping">
+            <img src="resources/img/camp.jpg" alt="camping" />
+        </div>
+        <img src="resources/img/phone.png" alt="iPhone icon" />
+        <h2>
+            Coming Soon for iPhone and Android
+        </h2>
+        <a href="">
+            Download Excursion (Coming soon!)
+        </a>
     </div>
-
-
+    <footer>
+        <div class="copyright">
+            © Excursion
+        </div>
+    </footer>
 </body>
 
 </html>
